# shellockolm

./: .all-contributorsrc  .gitattributes  .mcp-config.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  ENHANCEMENTS.md  FAST_INSTALL.md  INSTALL.md  INSTALL_QUICK.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SECURITY.md  SECURITY_SCAN_SUMMARY.md  install-arch.sh  install-debian.sh  install.ps1  install.sh  mcp.json  pyproject.toml  setup.bat  setup.py
.github/workflows/: ci.yml
docs/: CHANGELOG.md  CONTRIBUTORS.md  FAST_INSTALL.md  INSTALL.md  MCP_EXAMPLES.md  MCP_QUICK_START.md  MCP_SETUP.md  MCP_V3_PERFORMANCE.md  QUICKSTART.md  QUICK_START.md
scripts/: install-arch.sh  install-debian.sh  install.ps1  install.sh
src/: auto_fix.py  cli.py  configure_mcp.py  context_intelligence.py  dependency_tree.py  github_actions.py  github_advisory.py  github_scanner.py  gui.py  ignore_handler.py  lockfile_analyzer.py  malware_analyzer.py  malware_scanner.py  mass_patcher.py  mcp_server.py  npm_audit.py  remediation.py  sarif_output.py  sbom_generator.py  scan.py  scan_simple.py  scanner.py  secrets_scanner.py  security_score.py  server.py  vulnerability_database.py  watch_mode.py
src/scanners/: __init__.py  base.py  n8n.py  nextjs.py  nodejs.py  npm_packages.py  react_rsc.py  supply_chain.py
technical/: COMPLETE_CVE_INFO.md  FINAL_SCAN_RESULTS.md  MCP_DESIGN.md  NEXT_STEPS.md  SUCCESS_SUMMARY.md  VULNERABILITY_REPORT.md
