[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shellockolm"
version = "3.0.0"
description = "CLI & MCP Security Scanner for AI Agents - Detects CVEs, malware & supply chain attacks in React/Next.js/npm projects. Integrates with Claude, Copilot, Gemini."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = [
    "security-scanner", "ai-agent", "mcp-server", "cli-tool",
    "vulnerability-scanner", "cve-detection", "malware-scanner",
    "react", "nextjs", "nodejs", "npm", "rce",
    "claude-mcp", "copilot", "gemini", "ai-assistant",
    "supply-chain-security", "devsecops", "cybersecurity",
    "react-server-components", "shellockolm", "sherlock-holmes"
]
authors = [
    {name = "HLS iTech", email = "hlarosesurprenant@gmail.com"}
]
maintainers = [
    {name = "HLS iTech", email = "hlarosesurprenant@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
]

dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "packaging>=23.0",
    "aiofiles>=23.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/hlsitechio/Shellockolm-AI-CLI-MCP-Scanner"
Documentation = "https://github.com/hlsitechio/Shellockolm-AI-CLI-MCP-Scanner/blob/main/README.md"
Repository = "https://github.com/hlsitechio/Shellockolm-AI-CLI-MCP-Scanner"
"Bug Tracker" = "https://github.com/hlsitechio/Shellockolm-AI-CLI-MCP-Scanner/issues"
Changelog = "https://github.com/hlsitechio/Shellockolm-AI-CLI-MCP-Scanner/blob/main/CHANGELOG.md"

[project.scripts]
shellockolm = "cli:main"
shellockolm-scan = "cli:main"
# Legacy commands (deprecated, kept for backwards compatibility)
shellockolm-fix = "auto_fix:main"
shellockolm-patch = "mass_patcher:main"
shellockolm-malware = "malware_scanner:main"
shellockolm-github = "github_scanner:main"

[tool.setuptools]
packages = ["shellockolm"]
package-dir = {"shellockolm" = "src"}

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=. --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
